syntax = "proto3";

package api.v1;

option go_package = "go-grpc-rest-demo/api/gen/go/user/v1";

// UserService defines the service for managing users.
service UserService {
  // CreateUser creates a new user.
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // GetUser retrieves a user by their ID.
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // UpdateUser updates an existing user.
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  // DeleteUser deletes a user by their ID.
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  // ListUsers lists users with pagination, sorting, and filtering options.
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  bool is_active = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string full_name = 3;
}

message CreateUserResponse {
  User user = 1;
  string message = 2;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
  string message = 2;
}

message UpdateUserRequest {
  string id = 1;
  optional string username = 2;
  optional string email = 3;
  optional string full_name = 4;
  optional bool is_active = 5;
}

message UpdateUserResponse {
  User user = 1;
  string message = 2;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  string message = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  optional string sort_by = 3;
  optional string filter = 4;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}
